@@ -64,6 +64,10 @@ CGeneralPrefPage::CGeneralPrefPage()
 	gtk_widget_show (m_AAFont);
 	gtk_box_pack_start (GTK_BOX (m_Widget), m_AAFont, FALSE, FALSE, 0);
 
+	m_pWgetFiles = gtk_check_button_new_with_mnemonic (_("Use \"wget\" to download files."));
+	gtk_widget_show (m_pWgetFiles);
+	gtk_box_pack_start (GTK_BOX (m_Widget), m_pWgetFiles, FALSE, FALSE, 0);
+
 	hbox20 = gtk_hbox_new (FALSE, 0);
 	gtk_widget_show (hbox20);
 	gtk_box_pack_start (GTK_BOX (m_Widget), hbox20, FALSE, FALSE, 0);
@@ -104,28 +108,17 @@ CGeneralPrefPage::CGeneralPrefPage()
 	gtk_widget_show (m_MailClient);
  	gtk_box_pack_start (GTK_BOX (hbox21), m_MailClient, TRUE, TRUE, 0);
 
-	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(m_QueryOnCloseCon), 
-								AppConfig.QueryOnCloseCon);
-	
-	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(m_QueryOnExit), 
-								AppConfig.QueryOnExit);
-	
-	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(m_CancelSelAfterCopy), 
-								AppConfig.CancelSelAfterCopy);
-
-	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(m_ShowTrayIcon), 
-								AppConfig.ShowTrayIcon);
-								
-	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(m_AAFont), 
-								AppConfig.AntiAliasFont);
-
-	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(m_PopupNotifier), 
-								AppConfig.PopupNotifier);
+	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(m_QueryOnCloseCon), AppConfig.QueryOnCloseCon);
+	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(m_QueryOnExit), AppConfig.QueryOnExit);
+	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(m_CancelSelAfterCopy), AppConfig.CancelSelAfterCopy);
+	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(m_ShowTrayIcon), AppConfig.ShowTrayIcon);
+	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(m_AAFont), AppConfig.AntiAliasFont);
+	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(m_pWgetFiles), AppConfig.UseWgetFiles);
+	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(m_PopupNotifier), AppConfig.PopupNotifier);
 
 	gtk_spin_button_set_value(GTK_SPIN_BUTTON(m_PopupTimeout), AppConfig.PopupTimeout);
 
 	gtk_entry_set_text(GTK_ENTRY(m_WebBrowser), AppConfig.WebBrowser.c_str());
-	
 	gtk_entry_set_text(GTK_ENTRY(m_MailClient), AppConfig.MailClient.c_str());
 }
 
@@ -137,14 +130,9 @@ void CGeneralPrefPage::OnOK()
 	AppConfig.CancelSelAfterCopy = gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(m_CancelSelAfterCopy));
 	AppConfig.ShowTrayIcon = gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(m_ShowTrayIcon));
 	AppConfig.AntiAliasFont = gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(m_AAFont));
-
-	AppConfig.PopupNotifier =  gtk_toggle_button_get_active( 
-									GTK_TOGGLE_BUTTON(m_PopupNotifier));
-
-	AppConfig.PopupTimeout = (int)gtk_spin_button_get_value( 
-									GTK_SPIN_BUTTON(m_PopupTimeout));
-
-
+	AppConfig.UseWgetFiles = gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(m_pWgetFiles));
+	AppConfig.PopupNotifier =  gtk_toggle_button_get_active( GTK_TOGGLE_BUTTON(m_PopupNotifier));
+	AppConfig.PopupTimeout = (int)gtk_spin_button_get_value( GTK_SPIN_BUTTON(m_PopupTimeout));
 	AppConfig.WebBrowser = gtk_entry_get_text(GTK_ENTRY(m_WebBrowser));
 	AppConfig.MailClient = gtk_entry_get_text(GTK_ENTRY(m_MailClient));
 }
